apps/10-home/homeassistant/overlays/test/ingressroute-udp.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteUDP
metadata:
  name: homeassistant-coiot
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  entryPoints:
    - coiot
  routes:
    - services:
        - name: homeassistant-svc
          port: 5683
